fixed footer spacing issue on all pages

--- a/css/about.css
+++ b/css/about.css
@@ -34,7 +34,7 @@ footer .footer-above {
 }
 
 footer .footer-col {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 footer .footer-below {
