--- a/css/blog.css
+++ b/css/blog.css
@@ -34,12 +34,12 @@ footer h3 {
 }
 
 footer .footer-above {
-  padding-top: 50px;
+  padding-top: 5px;
   background-color: #2C3E50;
 }
 
 footer .footer-col {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 footer .footer-below {
