--- a/css/hireme.css
+++ b/css/hireme.css
@@ -38,7 +38,7 @@ footer .footer-above {
 }
 
 footer .footer-col {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 footer .footer-below {
